syntax = "proto3";

enum TaskStatus {
  PENDING = 0;
  ASSIGNED = 1;
  ACCEPTED = 2;  
  REJECTED = 3; 
  COMPLETED = 4;
}

message Task {
  string id = 1;
  string title = 2;
  uint64 reward = 3;
  uint32 time_limit_seconds = 4;
  string template_id = 5;
  string template_data = 6;
  string capability = 7;
}

message TaskAssignment {
  string peerId = 1;
  optional uint32 assigned_at = 2;
  optional uint32 accepted_at = 3;
  optional uint32 completed_at = 4;
  optional uint32 rejected_at = 5;
}
